@@ -4,8 +4,10 @@ CHANGES
 0.12 (unreleased)
 -----------------
 
-- Nothing changed yet.
-
+- Similar to the fix in 0.11, make sure calling for the URL of a resource
+  will not failed for a `DummyNeededResources` object which would badly hurt
+  testability of function or "browser" tests of applications that depend
+  on fanstatic/zope.fanstatic.
 
 0.11 (2011-08-17)
 -----------------
